# redis-actor

./: Cargo.toml
src/: lib.rs
src/actors/: mod.rs
src/actors/base/: mod.rs  state.rs
src/aggregates/: mod.rs
src/aggregates/redis/: command.rs  error.rs  event.rs  mod.rs
