[package]
name = "rust-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core processes
bastion = { version = "0.4.5", features = ["tokio-runtime", "scaling"] }
tokio = { version = "1.21", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logger
log4rs = "1.1"
log = "0.4"
chrono = "0.4"

async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cqrs-es = "0.4"
r2d2 = "0.8"

redis = { version = "0.22", features = ["cluster", "json"] }
